--- a/POS - SCW/C#/Taschenrechner_Skalierbar_Grammatik/Taschenrechner_Skalierbar_Grammatik/MainWindow.xaml
+++ b/POS - SCW/C#/Taschenrechner_Skalierbar_Grammatik/Taschenrechner_Skalierbar_Grammatik/MainWindow.xaml
@@ -1,44 +1,62 @@
-﻿<Window x:Class="Taschenrechner_Skalierbar_Grammatik.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="566" Width="312">
+﻿<Window
+    Height="566"
+    Title="MainWindow"
+    Width="312"
+    mc:Ignorable="d"
+    x:Class="Taschenrechner_Skalierbar_Grammatik.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Window.Resources>
         <ResourceDictionary>
 
-            <Style x:Key="NumberButton" TargetType="{x:Type Button}">
+            <Style TargetType="{x:Type Button}" x:Key="NumberButton">
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type Button}">
-                            <Border CornerRadius="10" BorderThickness="2" BorderBrush="Black" Background="White" Margin="5">
-                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <Border
+                                Background="White"
+                                BorderBrush="Black"
+                                BorderThickness="2"
+                                CornerRadius="10"
+                                Margin="5">
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
                             </Border>
                         </ControlTemplate>
                     </Setter.Value>
                 </Setter>
             </Style>
 
-            <Style x:Key="ImportantButton" TargetType="{x:Type Button}">
+            <Style TargetType="{x:Type Button}" x:Key="ImportantButton">
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type Button}">
-                            <Border CornerRadius="10" BorderThickness="2" BorderBrush="Black" Background="#d87c7c" Margin="5">
-                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <Border
+                                Background="#d87c7c"
+                                BorderBrush="Black"
+                                BorderThickness="2"
+                                CornerRadius="10"
+                                Margin="5">
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
                             </Border>
                         </ControlTemplate>
                     </Setter.Value>
                 </Setter>
             </Style>
 
-            <Style x:Key="CalcluateButton" TargetType="{x:Type Button}">
+            <Style TargetType="{x:Type Button}" x:Key="CalcluateButton">
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type Button}">
-                            <Border CornerRadius="10" BorderThickness="2" BorderBrush="Black" Background="#cccaca" Margin="5">
-                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <Border
+                                Background="#cccaca"
+                                BorderBrush="Black"
+                                BorderThickness="2"
+                                CornerRadius="10"
+                                Margin="5">
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
                             </Border>
                         </ControlTemplate>
                     </Setter.Value>
@@ -47,12 +65,17 @@
 
 
 
-            <Style x:Key="TextBoxStyle" TargetType="{x:Type TextBox}">
+            <Style TargetType="{x:Type TextBox}" x:Key="TextBoxStyle">
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type TextBox}">
-                            <Border CornerRadius="10" BorderThickness="1" BorderBrush="Black" Background="#eaeaea" Margin="5">
-                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <Border
+                                Background="#eaeaea"
+                                BorderBrush="Black"
+                                BorderThickness="1"
+                                CornerRadius="10"
+                                Margin="5">
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
                             </Border>
                         </ControlTemplate>
                     </Setter.Value>
@@ -80,40 +103,123 @@
             <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
 
-        <TextBox x:Name="calcHistory_TxB" IsEnabled="False" Style="{StaticResource TextBoxStyle}"/>
-        <Button x:Name="input_Btn_Result" Grid.Column="1" Content="Result" Style="{StaticResource CalcluateButton}"/>
+        <TextBox
+            IsEnabled="False"
+            Style="{StaticResource TextBoxStyle}"
+            x:Name="calcHistory_TxB" />
+        <Button
+            Click="Input_Btn_Result_OnClick"
+            Content="Result"
+            Grid.Column="1"
+            Style="{StaticResource CalcluateButton}"
+            x:Name="input_Btn_Result" />
 
-        <TextBox x:Name="calcInput_TxB" Grid.Row="1" Grid.ColumnSpan="2" Style="{StaticResource TextBoxStyle}"/>
+        <TextBox
+            Grid.ColumnSpan="2"
+            Grid.Row="1"
+            x:Name="calcInput_TxB" />
 
-        <UniformGrid Grid.Row="2" Grid.ColumnSpan="2" Rows="1" Columns="5">
-            <Button x:Name="input_Btn_KlammerAuf" Content="(" Style="{StaticResource CalcluateButton}"/>
-            <Button x:Name="input_Btn_KlammerZu" Content=")" Style="{StaticResource CalcluateButton}"/>
-            <Button x:Name="input_Btn_Square" Content="^" Style="{StaticResource CalcluateButton}"/>
-            <Button x:Name="input_Btn_Clear" Content="Clear" Style="{StaticResource ImportantButton}"/>
-            <Button x:Name="input_Btn_Delete" Content="Delete" Style="{StaticResource ImportantButton}"/>
+        <UniformGrid
+            Columns="5"
+            Grid.ColumnSpan="2"
+            Grid.Row="2"
+            Rows="1">
+            <Button
+                Content="("
+                Style="{StaticResource CalcluateButton}"
+                x:Name="input_Btn_KlammerAuf" Click="input_Btn_KlammerAuf_Click" />
+            <Button
+                Content=")"
+                Style="{StaticResource CalcluateButton}"
+                x:Name="input_Btn_KlammerZu" Click="input_Btn_KlammerZu_Click" />
+            <Button
+                Content="^"
+                Style="{StaticResource CalcluateButton}"
+                x:Name="input_Btn_Square" Click="input_Btn_Square_Click" />
+            <Button
+                Content="Clear"
+                Style="{StaticResource ImportantButton}"
+                x:Name="input_Btn_Clear" Click="input_Btn_Clear_Click" />
+            <Button
+                Content="Delete"
+                Style="{StaticResource ImportantButton}"
+                x:Name="input_Btn_Delete" Click="input_Btn_Delete_Click" />
         </UniformGrid>
 
-        <UniformGrid Grid.Row="3" Grid.RowSpan="4" Grid.ColumnSpan="2" Rows="4" Columns="4">
+        <UniformGrid
+            Columns="4"
+            Grid.ColumnSpan="2"
+            Grid.Row="3"
+            Grid.RowSpan="4"
+            Rows="4">
 
-            <Button x:Name="input_Btn_7" Content="7" Style="{StaticResource NumberButton}"/>
-            <Button x:Name="input_Btn_8" Content="8" Style="{StaticResource NumberButton}"/>
-            <Button x:Name="input_Btn_9" Content="9" Style="{StaticResource NumberButton}"/>
-            <Button x:Name="input_Btn_Plus" Content="+" Style="{StaticResource CalcluateButton}"/>
+            <Button
+                Content="7"
+                Style="{StaticResource NumberButton}"
+                x:Name="input_Btn_7" Click="input_Btn_7_Click" />
+            <Button
+                Content="8"
+                Style="{StaticResource NumberButton}"
+                x:Name="input_Btn_8" Click="input_Btn_8_Click" />
+            <Button
+                Content="9"
+                Style="{StaticResource NumberButton}"
+                x:Name="input_Btn_9" Click="input_Btn_9_Click" />
+            <Button
+                Content="+"
+                Style="{StaticResource CalcluateButton}"
+                x:Name="input_Btn_Plus" Click="input_Btn_Plus_Click" />
 
-            <Button x:Name="input_Btn_4" Content="4" Style="{StaticResource NumberButton}"/>
-            <Button x:Name="input_Btn_5" Content="5" Style="{StaticResource NumberButton}"/>
-            <Button x:Name="input_Btn_6" Content="6" Style="{StaticResource NumberButton}"/>
-            <Button x:Name="input_Btn_Minus" Content="-" Style="{StaticResource CalcluateButton}"/>
+            <Button
+                Content="4"
+                Style="{StaticResource NumberButton}"
+                x:Name="input_Btn_4" Click="input_Btn_4_Click" />
+            <Button
+                Content="5"
+                Style="{StaticResource NumberButton}"
+                x:Name="input_Btn_5" Click="input_Btn_5_Click" />
+            <Button
+                Content="6"
+                Style="{StaticResource NumberButton}"
+                x:Name="input_Btn_6" Click="input_Btn_6_Click" />
+            <Button
+                Content="-"
+                Style="{StaticResource CalcluateButton}"
+                x:Name="input_Btn_Minus" Click="input_Btn_Minus_Click" />
 
-            <Button x:Name="input_Btn_1" Content="1" Style="{StaticResource NumberButton}"/>
-            <Button x:Name="input_Btn_2" Content="2" Style="{StaticResource NumberButton}"/>
-            <Button x:Name="input_Btn_3" Content="3" Style="{StaticResource NumberButton}"/>
-            <Button x:Name="input_Btn_Mal" Content="*" Style="{StaticResource CalcluateButton}"/>
+            <Button
+                Content="1"
+                Style="{StaticResource NumberButton}"
+                x:Name="input_Btn_1" Click="input_Btn_1_Click" />
+            <Button
+                Content="2"
+                Style="{StaticResource NumberButton}"
+                x:Name="input_Btn_2" Click="input_Btn_2_Click" />
+            <Button
+                Content="3"
+                Style="{StaticResource NumberButton}"
+                x:Name="input_Btn_3" Click="input_Btn_3_Click" />
+            <Button
+                Content="*"
+                Style="{StaticResource CalcluateButton}"
+                x:Name="input_Btn_Mal" Click="input_Btn_Mal_Click" />
 
-            <Button x:Name="input_Btn_Vorzeichen" Content="+/-" Style="{StaticResource CalcluateButton}"/>
-            <Button x:Name="input_Btn_0" Content="0" Style="{StaticResource NumberButton}"/>
-            <Button x:Name="input_Btn_Comma" Content="," Style="{StaticResource CalcluateButton}"/>
-            <Button x:Name="input_Btn_Divide" Content="/" Style="{StaticResource CalcluateButton}"/>
+            <Button
+                Content="+/-"
+                Style="{StaticResource CalcluateButton}"
+                x:Name="input_Btn_Vorzeichen" Click="input_Btn_Vorzeichen_Click" />
+            <Button
+                Content="0"
+                Style="{StaticResource NumberButton}"
+                x:Name="input_Btn_0" Click="input_Btn_0_Click" />
+            <Button
+                Content=","
+                Style="{StaticResource CalcluateButton}"
+                x:Name="input_Btn_Comma" Click="input_Btn_Comma_Click" />
+            <Button
+                Content="/"
+                Style="{StaticResource CalcluateButton}"
+                x:Name="input_Btn_Divide" Click="input_Btn_Divide_Click" />
 
         </UniformGrid>
     </Grid>
