--- a/POS - SCW/C#/Taschenrechner_Skalierbar_Grammatik/Taschenrechner_Skalierbar_Grammatik/MainWindow.xaml
+++ b/POS - SCW/C#/Taschenrechner_Skalierbar_Grammatik/Taschenrechner_Skalierbar_Grammatik/MainWindow.xaml
@@ -91,16 +91,16 @@
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="3*" />
-            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="1*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
             <RowDefinition Height="0.5*" />
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="1*" />
-            <RowDefinition Height="1*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
         <TextBox
