--- a/POS - SCW/C#/Osterhase/Osterhase/MainWindow.xaml
+++ b/POS - SCW/C#/Osterhase/Osterhase/MainWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="Osterhase_Hilfsprogramm.MainWindow"
+﻿<Window x:Class="Osterhase.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Osterhase_Hilfsprogramm"
+        xmlns:local="clr-namespace:Osterhase"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <ListBox x:Name="PersonenListe"/>
     </Grid>
 </Window>
