--- a/POS - SCW/Praktische Arbeit 3 5C 2022-23/Praktische Arbeit 3 5C 2022-23/PA3_5CHIF/PA3_Client/MainWindow.xaml
+++ b/POS - SCW/Praktische Arbeit 3 5C 2022-23/Praktische Arbeit 3 5C 2022-23/PA3_5CHIF/PA3_Client/MainWindow.xaml
@@ -51,30 +51,39 @@
                                 <Style.Triggers>
                                     <DataTrigger Binding="{Binding Path=Value}" Value="0">
                                         <Setter Property="Foreground" Value="DarkGreen" />
+                                        <Setter Property="Background" Value="LightGray" />
                                     </DataTrigger>
                                     <DataTrigger Binding="{Binding Path=Value}" Value="1">
                                         <Setter Property="Foreground" Value="Green" />
+                                        <Setter Property="Background" Value="LightGray" />
                                     </DataTrigger>
                                     <DataTrigger Binding="{Binding Path=Value}" Value="2">
                                         <Setter Property="Foreground" Value="LightGreen" />
+                                        <Setter Property="Background" Value="LightGray" />
                                     </DataTrigger>
                                     <DataTrigger Binding="{Binding Path=Value}" Value="3">
                                         <Setter Property="Foreground" Value="LightYellow" />
+                                        <Setter Property="Background" Value="LightGray" />
                                     </DataTrigger>
                                     <DataTrigger Binding="{Binding Path=Value}" Value="4">
                                         <Setter Property="Foreground" Value="yellow" />
+                                        <Setter Property="Background" Value="LightGray" />
                                     </DataTrigger>
                                     <DataTrigger Binding="{Binding Path=Value}" Value="5">
                                         <Setter Property="Foreground" Value="Orange" />
+                                        <Setter Property="Background" Value="LightGray" />
                                     </DataTrigger>
                                     <DataTrigger Binding="{Binding Path=Value}" Value="6">
                                         <Setter Property="Foreground" Value="Pink" />
+                                        <Setter Property="Background" Value="LightGray" />
                                     </DataTrigger>
                                     <DataTrigger Binding="{Binding Path=Value}" Value="7">
                                         <Setter Property="Foreground" Value="Red" />
+                                        <Setter Property="Background" Value="LightGray" />
                                     </DataTrigger>
                                     <DataTrigger Binding="{Binding Path=Value}" Value="0">
                                         <Setter Property="Foreground" Value="DarkRed" />
+                                        <Setter Property="Background" Value="LightGray" />
                                     </DataTrigger>
                                 </Style.Triggers>
                             </Style>
