--- a/POS - SCW/C#/UnglaublicherRestaurantFinder/UnglaublicherRestaurantFinder/MainWindow.xaml
+++ b/POS - SCW/C#/UnglaublicherRestaurantFinder/UnglaublicherRestaurantFinder/MainWindow.xaml
@@ -34,9 +34,9 @@
         </ListView>
         
         <Button Grid.Column="2" Margin="20" Content="Daten Hinzufügen" Click="Open_AddDataPage"/>
-        <Canvas x:Name="canvas" Grid.ColumnSpan="2" Grid.Row="1">
+        <Canvas x:Name="canvas" Grid.ColumnSpan="2" Grid.Row="1" MouseDown="canvas_MouseDown">
             <Canvas.Background>
-                <ImageBrush ImageSource="C:\GitHub\5CHIF\POS - SCW\C#\UnglaublicherRestaurantFinder\UnglaublicherRestaurantFinder\Stadtplan-Wiener-Neustadt.jpg"/>
+                <ImageBrush ImageSource="D:\Github\5CHIF\POS - SCW\C#\UnglaublicherRestaurantFinder\UnglaublicherRestaurantFinder\Stadtplan-Wiener-Neustadt.jpg"/>
             </Canvas.Background>
         </Canvas>
 
