--- a/POS - SCW/C#/UnglaublicherRestaurantFinder/UnglaublicherRestaurantFinder/MainWindow.xaml
+++ b/POS - SCW/C#/UnglaublicherRestaurantFinder/UnglaublicherRestaurantFinder/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:UnglaublicherRestaurantFinder"
         mc:Ignorable="d"
         Loaded="Window_Loaded"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"
+        SizeChanged="Window_SizeChanged">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
